--- a/dragonball/templates/enemigosapp/listarEnemigos.html
+++ b/dragonball/templates/enemigosapp/listarEnemigos.html
@@ -34,6 +34,7 @@
                 <td>{{ enemigo.organizacion }}</td>
                 <td>{{ enemigo.planetas_destruidos }}</td>
                 <td><a href="/eliminarEnemigo/{{ enemigo.id }}">Eliminar</a></td>
+                <td><a href="/actualizarEnemigo/{{ enemigo.id }}">Actualizar</a></td>
             </tr>
             {% endfor %}
         </tbody>
